--- a/src/app/main.css
+++ b/src/app/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Pretendard-Regular', sans-serif;
+    font-family: 'Pretendard-Regular', sans-serif !important;
 }
 
 .main__hero-content {
@@ -25,16 +25,16 @@ body {
     border-radius: 100px;
     text-align: center;
     display: inline-block;
-    color: #fff !important;
+    color: #fff;
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
 }
 
 .main__hero-btn:hover {
-    background-color: #000;
-    color: #ffffff;
-    border: 1px solid #000;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #fff;
     transition: 0.5s ease-out;
 }
 
