--- a/src/app/main.css
+++ b/src/app/main.css
@@ -69,19 +69,13 @@ body {
 
 .main__recruit-wrap {
     width: 1000px;
-    margin: 0 auto;
+    margin: auto;
 }
 
-@media (min-width: 1280px) {
-    .main__recruit-wrap {
-        margin-left: 28rem;
-    }
-}
+
 
 @media (min-width: 1024px) and (max-width: 1279px) {
-    .main__recruit-wrap {
-        margin-left: 0rem;
-    }
+    .main__recruit-wrap {}
 }
 
 @media (max-width: 1023px) and (min-width: 769px) {
