--- a/src/app/main.css
+++ b/src/app/main.css
@@ -25,7 +25,7 @@
 }
 
 .main__hero-btn {
-    padding: 1.5rem 12rem;
+    padding: 1.5rem 9.5rem;
     border: 1px solid #fff;
     border-radius: 10px;
     text-align: center;
@@ -51,9 +51,9 @@
 }
 
 .main__service_desc {
-    max-width: 550px;
+    max-width: 800px;
     padding: 120px 0 80px;
-    font-size: 23px;
+    font-size: 25px;
     font-weight: 600;
     line-height: 1.62;
     color: #1e1e25;
@@ -77,6 +77,10 @@
     margin: auto;
 }
 
+.footer__wrap {
+    max-width: 1000px;
+    margin: 80px auto;
+}
 
 
 
