--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,3 +135,10 @@
 .animate-marquee {
   animation: marquee 25s linear infinite;
 }
+
+.body {
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+}
