--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,7 +136,7 @@
   animation: marquee 25s linear infinite;
 }
 
-.body {
+body {
   padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
   padding-left: env(safe-area-inset-left);
