--- a/src/app/main.css
+++ b/src/app/main.css
@@ -125,7 +125,7 @@
         max-width: 90vw;
         padding: 2rem 1rem;
         display: flex;
-
+        justify-content: center;
         flex-direction: column;
     }
 
