--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,3 +145,15 @@ body {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
+
+.animate-marquee {
+  box-shadow: none !important;
+  border-radius: 12px !important;
+  border: none !important;
+}
+
+.service__card .bg-card {
+  box-shadow: none !important;
+  border-radius: 12px !important;
+  border: none !important;
+}
